# takya_notifier

./: .env.example  .gitignore  Cargo.toml  README.md  diesel.toml
migrations/2020-06-09-051412_create_item/: down.sql  up.sql
src/: main.rs  models.rs  parsers.rs  schema.rs
src/fcm/: message.rs  mod.rs  notification.rs
