[package]
name = "takya_notifier"
version = "0.1.0"
authors = ["tomotomo"]
edition = "2018"

[features]
default = ["sentry"]

sentry = ["sentry_"]

[dependencies]
anyhow = "1.0.31"
dotenv = "0.15.0"
scraper = "0.12.0"
regex = "1.3.9"
strum = "0.18.0"
strum_macros = "0.18.0"
serde_with_macros = "1.1.0"
diesel = { version = "1.4.5", features = [ "mysql" ] }
diesel-derive-enum = { version = "1.1.0", features = [ "mysql" ] }
async-std = { version = "1.6.2", features = [ "attributes" ] }
surf = "1.0.3"
serde_json = "1.0.55"
serde = "1.0.114"
serde_derive = "1.0.114"
futures = "0.3.5"
thiserror = "1.0.20"

[dependencies.sentry_]
package = "sentry"
version = "0.19.0"
optional = true
default-features = false
features = [
    "backtrace",
    "contexts",
    "panic",
    "surf",
    "anyhow"
]
